--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@
 #search .search-title {
   font-size: 1.55rem;
   margin: 30px 30px 15px 30px;
-  font-family: "roboto", sans-serif;
+  
 }
 #search .search-subtitle {
   font-size: 1rem;
@@ -81,20 +81,20 @@
   box-shadow: 3px 3px 10px #0d0d0d;
   transition: 0.3s;
 }
+#functionning h2 {
+  margin: 40px 20px 15px 30px;
+}
+#functionning ol li {
+  width: 83%;
+  background-color: #f6f6f6;
+  box-shadow: 3px 3px 10px #bfbfbf;
+  padding: 25px;
+  border-radius: 25px;
+  margin: 12px;
+  font-size: 0.95rem;
+  position: relative;
+}
 
-.restaurants h2 {
-  margin: 40px 10px 10px 30px;
-  text-transform: initial;
-}
-.restaurants .restaurants__cards {
-  width: 100%;
-  margin: auto;
-}
-.restaurants .restaurants-cards h3 {
-  font-size: 1.1rem;
-  margin: 8px 20px 0px 15px;
-  
-}
 .restaurants .restaurants-cards p {
   font-size: 1em;
   margin: 5px 20px 0px 15px;
@@ -127,6 +127,16 @@
   -o-object-fit: cover;
   object-fit: cover;
 }
+.image-restaurant-enchantée{
+  -o-object-fit: cover;
+  object-fit: cover;
+  width: 100%;
+  height: 250px;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+
+
  .new {
   color: #2c9c81;
   background-color: #99e2d0;
