--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@
   position: relative;
   list-style-type: none;
 }
-.restaurants h2 {
+#restaurants h2 {
    margin: 40px 20px 15px 35px;
 }
 .restaurants-cards h3 {
