--- a/sass/main.scss
+++ b/sass/main.scss
@@ -77,8 +77,8 @@
   position: relative;
   list-style-type: none;
 }
-#restaurants h2 {
-   margin: 40px 20px 15px 35px;
+.restaurants h2 {
+  margin-left: 20px;
 }
 .restaurants-cards h3 {
   font-size: 1.2em;
