--- a/css/style.css
+++ b/css/style.css
@@ -66,20 +66,123 @@ header .logo-home {
   box-shadow: 3px 3px 10px #bfbfbf;
 }
 
-.search-button:hover {
-  opacity: 0.65;
-  transition: 0.3s;
-  box-shadow: 3px 3px 10px #0d0d0d;
-  transition: 0.3s;
+.loading-spinner {
+  width: 100%;
+  height: 120vh;
+  background: rgba(255, 255, 255, 0.5);
+  position: absolute;
+  z-index: 9999;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-animation: transition 3s ease both;
+  animation: transition 3s ease both;
 }
 
+.loading-spinner .loader {
+  border-radius: 50px;
+  border: 5px solid transparent;
+  display: inline-block;
+  position: relative;
+  right: 5px;
+  left: 5px;
+  top: 5px;
+  bottom: 5px;
+  border-radius: 50px;
+  width: 100px;
+  height: 100px;
+  border: 5px solid transparent;
+  border-top-color: #9356DC;
+  border-bottom-color: #9356DC;
+  -webkit-animation: spin 800ms linear infinite;
+  animation: spin 800ms linear infinite;
+}
+
+.loading-spinner .loader:after {
+  content: "";
+  position: absolute;
+  right: 5px;
+  left: 5px;
+  top: 5px;
+  bottom: 5px;
+  border-radius: 50px;
+  border: 5px solid transparent;
+  border-right-color: #FF79DA;
+  border-left-color: #FF79DA;
+  -webkit-animation: spin-reverse 400ms linear infinite;
+  animation: spin-reverse 400ms linear infinite;
+}
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes spin-reverse {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(-360deg);
+    transform: rotate(-360deg);
+  }
+}
+@keyframes spin-reverse {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(-360deg);
+    transform: rotate(-360deg);
+  }
+}
+@-webkit-keyframes transition {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    z-index: -1;
+  }
+}
+@keyframes transition {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    z-index: -1;
+  }
+}
 #functionning h2 {
   margin: 40px 20px 15px 30px;
 }
 
-
 #functionning ul li {
-  width: 75%;
+  width: 80%;
   background-color: #f6f6f6;
   box-shadow: 3px 3px 10px #bfbfbf;
   padding: 25px;
@@ -90,16 +193,17 @@ header .logo-home {
   list-style-type: none;
 }
 
-
-#functionning ul li:hover {
-  background-color: #f5edff;
-  transition: 0.3s;
+#functionning ul li:hover .step {
+  color: #9256dc;
 }
 
+#functionning .step {
+  padding: 0 14px 0 8px;
+  font-weight: bold;
+}
 
-
-#restaurants h2 {
-  margin: 40px 20px 15px 35px;
+.restaurants h2 {
+  margin-left: 40px;
 }
 
 .restaurants-cards h3 {
