--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ header .logo-home {
 
 .loading-spinner {
   width: 100%;
-  height: 120vh;
+  height: 110vh;
   background: rgba(255, 255, 255, 0.5);
   position: absolute;
   z-index: 9999;
@@ -187,6 +187,7 @@ header .logo-home {
   display: flex;
   flex-direction: column;
   align-items: center;
+  opacity: 1;
 }
 
 #functionning ul li {
@@ -204,7 +205,7 @@ header .logo-home {
 #functionning ul li::before {
   content: counter(liste-couleur);
   counter-increment: liste-couleur;
-  color: #ffffff;
+  color: white;
   font-weight: bolder;
   background-color: #9256dc;
   border-radius: 100px;
@@ -214,8 +215,9 @@ header .logo-home {
   top: 5vw;
 }
 
-#functionning ul li :hover {
-  color: #9256dc;
+#functionning ul li:hover {
+  background-color: #f5edff;
+  transition: 0.3s;
 }
 
 #functionning .step {
@@ -224,7 +226,7 @@ header .logo-home {
 }
 
 .restaurants h2 {
-  margin-left: 40px;
+  margin: 40px 20px 15px 30px;
 }
 
 .restaurants-cards h3 {
