--- a/sass/main.scss
+++ b/sass/main.scss
@@ -325,7 +325,7 @@ footer ul li .fas {
 }
 
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
   header .logo-home {
     width: 50%;
   }
@@ -341,7 +341,21 @@ footer ul li .fas {
     left: -1%;
     top: 30%;
   }
+  .restaurants-cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .restaurants-cards .box-restaurant {
+    width: 42%;
+    height: 50%;
+    
+  }
+ 
+ 
 }
+ 
+
 
   
  
