--- a/css/style.css
+++ b/css/style.css
@@ -333,7 +333,7 @@ footer ul li .fas {
   margin-right: 10px;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
   header .logo-home {
     width: 50%;
   }
@@ -349,6 +349,17 @@ footer ul li .fas {
     position: absolute;
     left: -1%;
     top: 30%;
+  }
+
+  .restaurants-cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .restaurants-cards .box-restaurant {
+    width: 42%;
+    height: 50%;
   }
 }
 
