--- a/sass/main.css
+++ b/sass/main.css
@@ -1,49 +1,60 @@
-
+@charset "UTF-8";
 * {
-    margin: 0;
-    
-  }
-   html {
-    width: 100%;
-    -webkit-overflow-x: hidden;
-    overflow-x: hidden;
-  }
-  
-  body {
-    font-family: "roboto", sans-serif;
-  }
-  header {
-    display: flex;
-  }
-  header .logo-home {
-    width: 64%;
-    margin: auto;
-    padding: 18px;
-  }
-  #search {
+  margin: 0;
+}
+
+html {
+  width: 100%;
+  -webkit-overflow-x: hidden;
+  overflow-x: hidden;
+}
+
+body {
+  font-family: "roboto", sans-serif;
+}
+
+header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+header .logo-home {
+  width: 64%;
+  margin: auto;
+  padding: 18px;
+}
+
+#search {
   text-align: center;
   background-color: #f6f6f6;
   width: 100%;
-  }
-  #search form {
+}
+
+#search form {
+  background: -webkit-gradient(linear, left top, left bottom, from(lightgray), color-stop(12%, #eaeaea));
   background: linear-gradient(180deg, lightgray 0%, #eaeaea 12%);
-  }
-  .searchfield {
+}
+
+.searchfield {
   width: 120px;
   padding: 16px 5px;
   font-weight: bold;
   border: none;
   background-color: transparent;
 }
+
 #search .search-title {
   font-size: 2em;
   margin: 30px 30px 15px 30px;
 }
+
 #search .search-subtitle {
   font-size: 1.2em;
   font-weight: normal;
   text-transform: initial;
 }
+
 .search-button {
   cursor: pointer;
   opacity: 0.8;
@@ -55,7 +66,8 @@
   font-size: 0.8rem;
   margin: 20px 10px 40px 10px;
   background: linear-gradient(177deg, #ff79da 10%, #9256dc 90%);
-  box-shadow: 3px 3px 10px #bfbfbf;
+  -webkit-box-shadow: 3px 3px 10px #bfbfbf;
+          box-shadow: 3px 3px 10px #bfbfbf;
 }
 
 .loading-spinner {
@@ -68,16 +80,16 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-animation: transition 3s ease both;
-          animation: transition 3s ease both;
+  animation: transition 3s ease both;
 }
 
-.loading-spinner .loader{
+.loading-spinner .loader {
   border-radius: 50px;
   border: 5px solid transparent;
   display: inline-block;
@@ -111,47 +123,47 @@
   animation: spin-reverse 400ms linear infinite;
 }
 
- @-webkit-keyframes spin {
+@-webkit-keyframes spin {
   0% {
     -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   100% {
     -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
 
 @keyframes spin {
   0% {
     -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   100% {
     -webkit-transform: rotate(360deg);
-            transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
 
 @-webkit-keyframes spin-reverse {
   0% {
     -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   100% {
     -webkit-transform: rotate(-360deg);
-            transform: rotate(-360deg);
+    transform: rotate(-360deg);
   }
 }
 
 @keyframes spin-reverse {
   0% {
     -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   100% {
     -webkit-transform: rotate(-360deg);
-            transform: rotate(-360deg);
+    transform: rotate(-360deg);
   }
 }
 
@@ -175,34 +187,37 @@
   }
 }
 
-
 #functionning h2 {
   margin: 40px 20px 15px 30px;
-  }
+}
 
-  #functionning ul {
-    
-    list-style-type: none;
-    counter-reset: liste-couleur;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    opacity: 1;
-    
-   }
-  
- 
+#functionning ul {
+  list-style-type: none;
+  counter-reset: liste-couleur;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  opacity: 1;
+}
+
 #functionning ul li {
   width: 80%;
   background-color: #f6f6f6;
-  box-shadow: 3px 3px 10px #bfbfbf;
+  -webkit-box-shadow: 3px 3px 10px #bfbfbf;
+          box-shadow: 3px 3px 10px #bfbfbf;
   padding: 25px;
   border-radius: 25px;
   margin: 12px;
   font-size: 0.95rem;
   position: relative;
-  list-style-type:none ;
-  
+  list-style-type: none;
 }
 
 #functionning ul li::before {
@@ -217,39 +232,48 @@
   left: -3%;
   top: 29%;
 }
-#functionning ul li:hover  {
-  background-color:#f5edff ;
-  transition: 0.3s
+
+#functionning ul li:hover {
+  background-color: #f5edff;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
-#functionning ul :hover  {
+
+#functionning ul :hover {
   color: #9256dc;
 }
+
 #functionning .step {
   padding: 0 14px 0 8px;
   font-weight: bold;
 }
+
 .restaurants h2 {
   margin: 40px 20px 15px 30px;
 }
+
 .restaurants-cards h3 {
   font-size: 1.2em;
   margin: 8px 20px 0px 15px;
   color: black;
 }
-a{
+
+a {
   text-decoration: none;
 }
+
 .restaurants-cards p {
   font-size: 1em;
   margin: 5px 20px 0px 15px;
   color: #0d0d0d;
 }
+
 .heart {
   color: #777777;
   position: absolute;
   bottom: 10px;
   right: 25px;
-  font-size: 1.6em
+  font-size: 1.6em;
 }
 
 .box-restaurant {
@@ -259,12 +283,14 @@ a{
   margin: auto;
   margin-top: 25px;
   border-radius: 15px;
-  box-shadow: 3px 3px 10px #bfbfbf;
+  -webkit-box-shadow: 3px 3px 10px #bfbfbf;
+          box-shadow: 3px 3px 10px #bfbfbf;
   background-color: #ffffff;
   -webkit-animation: restaurants 2.5s ease-in-out 0.6s forwards;
   animation: restaurants 2.5s ease-in-out 0.6s forwards;
 }
- .image-restaurant {
+
+.image-restaurant {
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
   width: 100%;
@@ -272,7 +298,8 @@ a{
   -o-object-fit: cover;
   object-fit: cover;
 }
-.image-restaurant-enchantée{
+
+.image-restaurant-enchantée {
   -o-object-fit: cover;
   object-fit: cover;
   width: 100%;
@@ -280,6 +307,7 @@ a{
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
 }
+
 .new {
   color: #2c9c81;
   background-color: #99e2d0;
@@ -288,41 +316,44 @@ a{
   width: fit-content;
   position: absolute;
   top: 0.5em;
- right: 1em;
+  right: 1em;
   padding: 6.5px 9.5px;
   font-size: 15px;
   font-weight: bold;
   border-radius: 2px;
 }
+
 footer {
   padding: 20px;
   background-color: #353535;
   margin-top: 50px;
 }
+
 footer h2 {
   color: #ffffff;
-  font-family: "Shrikhand", cursive ;
+  font-family: "Shrikhand", cursive;
   font-size: 1.3rem;
   margin-bottom: 15px;
 }
+
 footer ul {
   padding: 0;
 }
+
 footer ul li {
   list-style-type: none;
   margin-bottom: 10px;
-  
 }
+
 footer ul li a {
   color: #ffffff;
-  
 }
+
 footer ul li .fas {
   margin-right: 10px;
 }
 
-
-@media screen and (min-width:455px) and (max-width: 768px) {
+@media screen and (min-width: 455px) and (max-width: 768px) {
   header .logo-home {
     width: 50%;
   }
@@ -338,25 +369,5 @@ footer ul li .fas {
     left: -1%;
     top: 30%;
   }
-  
-  
-  }
-  @media screen and (max-width: 1024px){
-
-  }
-  @media screen and (max-width: 1440px) {
-    
-    
-    
-  }
-    
-  
-    
-
-  
- 
-  
-  
- 
- 
- 
+}
+/*# sourceMappingURL=main.css.map */
