--- a/css/style.css
+++ b/css/style.css
@@ -81,8 +81,9 @@ header .logo-home {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  -webkit-animation: transition 3s ease both;
-  animation: transition 3s ease both;
+  -webkit-animation: transition 5s ease both;
+  animation: transition 5s ease both;
+  opacity: 1;
 }
 
 .loading-spinner .loader {
@@ -115,8 +116,8 @@ header .logo-home {
   border: 5px solid transparent;
   border-right-color: #FF79DA;
   border-left-color: #FF79DA;
-  -webkit-animation: spin-reverse 400ms linear infinite;
-  animation: spin-reverse 400ms linear infinite;
+  -webkit-animation: spin-reverse 500ms linear infinite;
+  animation: spin-reverse 500ms linear infinite;
 }
 
 @-webkit-keyframes spin {
@@ -191,7 +192,7 @@ header .logo-home {
 }
 
 #functionning ul li {
-  width: 80%;
+  width: 76%;
   background-color: #f6f6f6;
   box-shadow: 3px 3px 10px #bfbfbf;
   padding: 25px;
@@ -333,22 +334,9 @@ footer ul li .fas {
   margin-right: 10px;
 }
 
-@media screen and (min-width: 455px) and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   header .logo-home {
     width: 50%;
-  }
-
-  #functionning ul li::before {
-    content: counter(liste-couleur);
-    counter-increment: liste-couleur;
-    color: white;
-    font-weight: bolder;
-    background-color: #9256dc;
-    border-radius: 100px;
-    padding: 5px 9px;
-    position: absolute;
-    left: -1%;
-    top: 30%;
   }
 }
 
