insertion anim coeur

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -246,15 +246,26 @@ a{
   margin: 5px 20px 0px 15px;
   color: #0d0d0d;
 }
-.heart {
+.fa-heart {
   color: #777777;
   position: absolute;
   bottom: 10px;
   right: 25px;
-  font-size: 1.6em
+  font-size: 1.6em;
 }
-
-
+.fa-heart {
+  background-color: #ffffff;
+  padding:.2em;
+}
+.fa-heart::before {
+  content: "\f004";
+  font-weight: bold;
+  transition: color 1s ease-out;
+}
+.fa-heart:hover::before{
+  color: red;
+  cursor: pointer;
+}
 
 
 .box-restaurant {
@@ -358,6 +369,5 @@ footer ul li .fas {
  
   
   
- 
  
  
