--- a/sass/main.css
+++ b/sass/main.css
@@ -269,12 +269,29 @@ a {
   color: #0d0d0d;
 }
 
-.heart {
+.fa-heart {
   color: #777777;
   position: absolute;
   bottom: 10px;
   right: 25px;
   font-size: 1.6em;
+}
+
+.fa-heart {
+  background-color: #ffffff;
+  padding: .2em;
+}
+
+.fa-heart::before {
+  content: "\f004";
+  font-weight: bold;
+  -webkit-transition: color 1s ease-out;
+  transition: color 1s ease-out;
+}
+
+.fa-heart:hover::before {
+  color: red;
+  cursor: pointer;
 }
 
 .box-restaurant {
