ajout effet bouton

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -28,6 +28,7 @@
   #search form {
   background: linear-gradient(180deg, lightgray 0%, #eaeaea 12%);
   }
+   
   .searchfield {
   width: 120px;
   padding: 16px 5px;
@@ -56,6 +57,12 @@
   margin: 20px 10px 40px 10px;
   background: linear-gradient(177deg, #ff79da 10%, #9256dc 90%);
   box-shadow: 3px 3px 10px #bfbfbf;
+}
+.search-button:hover {
+  opacity: 0.65;
+  transition: 0.3s;
+  box-shadow: 3px 3px 10px #0d0d0d;
+  transition: 0.3s;
 }
 
 .loading-spinner {
