--- a/sass/main.css
+++ b/sass/main.css
@@ -70,6 +70,15 @@ header .logo-home {
           box-shadow: 3px 3px 10px #bfbfbf;
 }
 
+.search-button:hover {
+  opacity: 0.65;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  -webkit-box-shadow: 3px 3px 10px #0d0d0d;
+          box-shadow: 3px 3px 10px #0d0d0d;
+  transition: 0.3s;
+}
+
 .loading-spinner {
   width: 100%;
   height: 110vh;
