--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,13 @@ header .logo-home {
   box-shadow: 3px 3px 10px #bfbfbf;
 }
 
+.search-button:hover {
+  opacity: 0.65;
+  transition: 0.3s;
+  box-shadow: 3px 3px 10px #0d0d0d;
+  transition: 0.3s;
+}
+
 .loading-spinner {
   width: 100%;
   height: 110vh;
