--- a/css/pages.css
+++ b/css/pages.css
@@ -54,7 +54,9 @@
     margin-bottom: 10px;
   }
   footer ul li a {
-    color: #ffffff;
+   
+    text-decoration: none;
+  color: white;
   }
   footer ul li .fas {
     margin-right: 10px;
