insertion media queries

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@
   
   body {
     font-family: "roboto", sans-serif;
+     
   }
   header {
     display: flex;
@@ -256,53 +257,36 @@ a{
 .fa-heart {
   color: #777777;
   position: absolute;
-  bottom: 10px;
+  bottom: 21px;
   right: 25px;
   font-size: 1.6em;
 }
-.fa-heart {
-  background-color: #ffffff;
-  padding:.2em;
-}
-.fa-heart::before {
-  content: "\f004";
-  font-weight: bold;
-  transition: color 1s ease-out;
-}
-.fa-heart:hover::before{
-  color: red;
-  cursor: pointer;
-}
 
 
-.box-restaurant {
+
+.restaurants .box-restaurant {
   position: relative;
-  width: 95%;
-  height: 100%;
+  width: 90%;
+  height: 60vw;
   margin: auto;
   margin-top: 25px;
   border-radius: 15px;
   box-shadow: 3px 3px 10px #bfbfbf;
   background-color: #ffffff;
-  -webkit-animation: restaurants 2.5s ease-in-out 0.6s forwards;
-  animation: restaurants 2.5s ease-in-out 0.6s forwards;
+ 
 }
- .image-restaurant {
+.restaurants .image-restaurant {
   border-top-left-radius: 15px;
   border-top-right-radius: 15px;
   width: 100%;
-  height: 40%;
+  height: 70%;
   -o-object-fit: cover;
   object-fit: cover;
 }
-.image-restaurant-enchantée{
-  -o-object-fit: cover;
-  object-fit: cover;
-  width: 100%;
-  height: 250px;
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
-}
+
+
+
+
 .new {
   color: #2c9c81;
   background-color: #99e2d0;
@@ -343,8 +327,23 @@ footer ul li .fas {
 }
 
 
-@media screen  and (min-width: 425px){
- 
+@media screen  and (min-width: 600px){
+  
+  .restaurants-cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .restaurants-cards .box-restaurant {
+    width: 42%;
+    height: 36vw;
+    margin: 10px 15px;
+  }
+  .restaurants-cards .far {
+    bottom: 4vw;
+    right: 4vw;
+  }
+
 }
 
 
@@ -354,7 +353,12 @@ footer ul li .fas {
   header .logo-home {
     width: 50%;
   }
- 
+  
+
+
+
+  
+  
 
   
   
@@ -362,36 +366,32 @@ footer ul li .fas {
   
   }
   @media screen and (min-width: 1024px){
-    #functionning ul {
+    
+  
+  
+  #functionning ul {
       flex-direction: row;
       align-items: center;
       display: flex;
       
      }
-    .restaurants-cards {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-    .box-restaurant{
-      width: 42%;
-      height: 50%;
-    }
-    .image-restaurant-enchantée{
-      height: 405px;
-    }
-    
-    #functionning ul {
-      margin-right: 40px;
-    }
-    #functionning ul li::before {
+     #functionning ul li::before {
       left: -1vw;
       top: 1.8vw;
     }
+    .restaurants .box-restaurant {
+      height: 28vw;
+    }
+    
+    
   
   }
   @media screen and (min-width: 1440px) {
-    
+    #search form .searchfield {
+      width: 15vw;
+      padding: 2vw 2vw;
+      font-size: 1.2rem;
+    }
    
     #search .search-title {
       font-size: 1.9rem;
@@ -402,10 +402,19 @@ footer ul li .fas {
     #search .search-button {
       font-size: 1.1rem;
     }
-    #functionning ul li::before {
-      left: -1vw;
-      top: 1.5vw;
+    #functionning h2 {
+      font-size: 1.9rem;
     }
+    #functionning ul li::before {
+      left: -2%;
+      top: 29%;
+    }
+    .restaurants .box-restaurant {
+      height: 22vw;
+    }
+
+   
+   
   
     
     
