--- a/sass/main.css
+++ b/sass/main.css
@@ -277,12 +277,23 @@ a {
   color: #0d0d0d;
 }
 
-.fa-heart {
+.far {
   color: #777777;
   position: absolute;
-  bottom: 21px;
+  bottom: 24px;
   right: 25px;
   font-size: 1.6em;
+}
+
+.fa-heart::before {
+  font-weight: bold;
+  -webkit-transition: color 1s ease-out;
+  transition: color 1s ease-out;
+}
+
+.fa-heart ::before {
+  background-color: red;
+  cursor: pointer;
 }
 
 .restaurants .box-restaurant {
@@ -351,7 +362,7 @@ footer ul li .fas {
   margin-right: 10px;
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 577px) {
   .restaurants-cards {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -368,8 +379,8 @@ footer ul li .fas {
     margin: 10px 15px;
   }
   .restaurants-cards .far {
-    bottom: 4vw;
-    right: 4vw;
+    bottom: 3vw;
+    right: 3vw;
   }
 }
 
@@ -377,9 +388,25 @@ footer ul li .fas {
   header .logo-home {
     width: 50%;
   }
+  #functionning ul li::before {
+    left: -2%;
+    top: 29%;
+  }
+  .restaurants-cards .box-restaurant {
+    width: 42%;
+    height: 30vw;
+    margin: 10px 15px;
+  }
+  .restaurants-cards .far {
+    bottom: 3vw;
+    right: 2vw;
+  }
 }
 
 @media screen and (min-width: 1024px) {
+  header .logo-home {
+    width: 40%;
+  }
   #functionning ul {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -393,11 +420,15 @@ footer ul li .fas {
     display: flex;
   }
   #functionning ul li::before {
-    left: -1vw;
-    top: 1.8vw;
+    left: -3%;
+    top: 29%;
   }
   .restaurants .box-restaurant {
-    height: 28vw;
+    height: 20vw;
+  }
+  .restaurants-cards .far {
+    bottom: 2vw;
+    right: 2vw;
   }
 }
 
@@ -405,7 +436,7 @@ footer ul li .fas {
   #search form .searchfield {
     width: 15vw;
     padding: 2vw 2vw;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
   }
   #search .search-title {
     font-size: 1.9rem;
@@ -414,7 +445,7 @@ footer ul li .fas {
     font-size: 1.25rem;
   }
   #search .search-button {
-    font-size: 1.1rem;
+    font-size: 1.2rem;
   }
   #functionning h2 {
     font-size: 1.9rem;
@@ -424,7 +455,8 @@ footer ul li .fas {
     top: 29%;
   }
   .restaurants .box-restaurant {
-    height: 22vw;
+    height: 20vw;
+    width: 47%;
   }
 }
 /*# sourceMappingURL=main.css.map */
