--- a/sass/main.css
+++ b/sass/main.css
@@ -277,17 +277,51 @@ a {
   color: #0d0d0d;
 }
 
-.far {
-  color: #777777;
+.heart-empty {
   position: absolute;
-  bottom: 24px;
-  right: 25px;
+  bottom: 18px;
+  right: 24px;
+  font-size: 1.6em;
+  color: #777777;
+}
+
+.heart-full {
+  position: absolute;
+  bottom: 18px;
+  right: 24px;
+  cursor: pointer;
+  opacity: 0;
+  z-index: 1;
   font-size: 1.6em;
 }
 
-.fa-heart ::before {
-  color: red;
+.heart-empty:hover {
+  -webkit-animation: vide 1s forwards linear;
+          animation: vide 1s forwards linear;
   cursor: pointer;
+}
+
+.heart-empty:hover + i {
+  opacity: 1;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition: -webkit-transform 1s linear;
+  transition: -webkit-transform 1s linear;
+  transition: transform 1s linear;
+  transition: transform 1s linear, -webkit-transform 1s linear;
+}
+
+.heart-full {
+  position: absolute;
+  opacity: 0;
+  background: -webkit-gradient(linear, left bottom, left top, from(#FF79DA), to(#9356DC));
+  background: linear-gradient(to top, #FF79DA, #9356DC);
+  -webkit-background-clip: text;
+  color: transparent;
+  -webkit-transform-origin: bottom;
+          transform-origin: bottom;
+  -webkit-transform: scale(0);
+          transform: scale(0);
 }
 
 .restaurants .box-restaurant {
@@ -356,6 +390,17 @@ footer ul li .fas {
   margin-right: 10px;
 }
 
+#background-image {
+  width: 100%;
+}
+
+.menu-lanoteenchantee {
+  -o-object-fit: cover;
+  object-fit: cover;
+  width: 300px;
+  height: 200px;
+}
+
 @media screen and (min-width: 577px) {
   .restaurants-cards {
     display: -webkit-box;
@@ -372,10 +417,6 @@ footer ul li .fas {
     height: 36vw;
     margin: 10px 15px;
   }
-  .restaurants-cards .far {
-    bottom: 3vw;
-    right: 3vw;
-  }
 }
 
 @media screen and (min-width: 768px) {
@@ -390,10 +431,6 @@ footer ul li .fas {
     width: 42%;
     height: 30vw;
     margin: 10px 15px;
-  }
-  .restaurants-cards .far {
-    bottom: 3vw;
-    right: 2vw;
   }
 }
 
@@ -434,10 +471,6 @@ footer ul li .fas {
     transform: scale(1.05);
     -webkit-transition: 0.4s;
     transition: 0.4s;
-  }
-  .restaurants-cards .far {
-    bottom: 2vw;
-    right: 2vw;
   }
 }
 
