footer media query

--- a/sass/main.css
+++ b/sass/main.css
@@ -432,6 +432,9 @@ footer ul li .fas {
     height: 30vw;
     margin: 10px 15px;
   }
+  footer {
+    text-align: center;
+  }
 }
 
 @media screen and (min-width: 1024px) {
@@ -439,13 +442,16 @@ footer ul li .fas {
     width: 40%;
   }
   .searchfield {
-    width: 170px;
+    width: 220px;
   }
   .search-button {
     font-size: 1rem;
   }
   form input {
     font-size: 1rem;
+  }
+  footer {
+    font-size: 1.2rem;
   }
   #functionning ul {
     -webkit-box-orient: horizontal;
@@ -476,7 +482,7 @@ footer ul li .fas {
 
 @media screen and (min-width: 1440px) {
   #search form .searchfield {
-    width: 15vw;
+    width: 17vw;
     padding: 2vw 2vw;
     font-size: 1.3rem;
   }
