footer media query

--- a/css/style.css
+++ b/css/style.css
@@ -399,6 +399,10 @@ footer ul li .fas {
     height: 30vw;
     margin: 10px 15px;
   }
+
+  footer {
+    text-align: center;
+  }
 }
 @media screen and (min-width: 1024px) {
   header .logo-home {
@@ -406,7 +410,7 @@ footer ul li .fas {
   }
 
   .searchfield {
-    width: 170px;
+    width: 220px;
   }
 
   .search-button {
@@ -415,6 +419,10 @@ footer ul li .fas {
 
   form input {
     font-size: 1rem;
+  }
+
+  footer {
+    font-size: 1.2rem;
   }
 
   #functionning ul {
@@ -443,7 +451,7 @@ footer ul li .fas {
 }
 @media screen and (min-width: 1440px) {
   #search form .searchfield {
-    width: 15vw;
+    width: 17vw;
     padding: 2vw 2vw;
     font-size: 1.3rem;
   }
