--- a/sass/main.scss
+++ b/sass/main.scss
@@ -327,7 +327,7 @@ a{
   font-weight: bold;
   border-radius: 2px;
 }
-#background-image {
+#background-image{
   width: 100%;
 }
 .menu-lanoteenchantee{
@@ -337,7 +337,57 @@ a{
     width: 300px;
     height: 200px;
   }
+  .restaurant-title {
+    font-family: "Shrikhand", cursive;
+    font-size: 1.6rem;
+    
+  }
+  .restaurant-name .heart {
+    position: relative;
+  }
+  
 
+.restaurant-name .heart-empty {
+  color: #777777;
+  position: absolute;
+  bottom: 7px;
+  right: 28px;
+  font-size: 1.6rem;
+}
+.restaurant-name .heart-full {
+  color: #777777;
+  position: absolute;
+  bottom: 7px;
+  right: 28px;
+  font-size: 1.6rem;
+}
+
+.restaurant-name .heart-full {
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  background-image: linear-gradient(to top, #FF79DA, #9356DC);
+  font-size: 1.6rem;
+  display: block;
+  position: absolute;
+  bottom: 7px;
+  right: 28px;
+  opacity: 0;
+}
+ .menu-title {
+  text-transform: uppercase;
+  font-size: 1rem;
+  font-weight: initial;
+  margin: 30px 20px;
+  position: relative;
+}
+.menu-title::before {
+  content: "";
+  position: absolute;
+  width: 78px;
+  height: 25px;
+  left: 0%;
+  border-bottom: 3px solid #99e2d0;
+}
 footer {
   padding: 20px;
   background-color: #353535;
