--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,13 +1,13 @@
 $color-primary: #9256dc;
 $color-secondary: #ff79da;
-
+$color-tertiary:#99e2d0;
 
 $backgroundcolor-main: #f6f6f6;
 $backgroundcolor-dark: darken($backgroundcolor-main, 4.71);
 $backgroundcolor-darker: darken($backgroundcolor-main, 13.73);
 $backgroundcolor-footer: darken($backgroundcolor-main, 75.69);
 $background-gradient: linear-gradient(
-  50deg,
+  30deg,
   $color-secondary 10%,
   $color-primary 90%
 );
