--- a/sass/main.css
+++ b/sass/main.css
@@ -360,15 +360,24 @@ a {
   border-radius: 2px;
 }
 
+.arrow {
+  font-size: 1.5rem;
+  margin-top: 30px;
+  margin-left: 20px;
+  color: #0d0d0d;
+}
+
 #background-image {
-  width: 100%;
+  width: 457px;
+  -o-object-fit: cover;
+  object-fit: cover;
 }
 
 .menu-lanoteenchantee {
   -o-object-fit: cover;
   object-fit: cover;
-  width: 300px;
-  height: 200px;
+  width: 450px;
+  height: 220px;
 }
 
 .restaurant-title {
@@ -411,7 +420,7 @@ a {
 
 .menu-title {
   text-transform: uppercase;
-  font-size: 1rem;
+  font-size: 1.2rem;
   font-weight: initial;
   margin: 30px 20px;
   position: relative;
@@ -420,10 +429,47 @@ a {
 .menu-title::before {
   content: "";
   position: absolute;
-  width: 78px;
+  width: 95px;
   height: 25px;
   left: 0%;
   border-bottom: 3px solid #99e2d0;
+}
+
+.choice-1,
+.choice-2,
+.choice-3,
+.choice-4 {
+  width: 95%;
+  height: 55px;
+  cursor: pointer;
+  background: #ffffff;
+  margin: 10px 12px;
+  padding: 5px 0;
+  border-radius: 15px;
+  overflow: hidden;
+  -webkit-box-shadow: 3px 3px 10px #bfbfbf;
+          box-shadow: 3px 3px 10px #bfbfbf;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+#button-commander {
+  cursor: pointer;
+  opacity: 1;
+  border: none;
+  border-radius: 25px;
+  padding: 16px 30px;
+  color: #ffffff;
+  font-weight: bold;
+  font-size: 1rem;
+  margin: 50px 130px 20px;
+  background: linear-gradient(177deg, #ff79da 10%, #9256dc 90%);
+  -webkit-box-shadow: 3px 3px 10px #bfbfbf;
+          box-shadow: 3px 3px 10px #bfbfbf;
 }
 
 footer {
