--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@
 * {
     margin: 0;
     
+    
   }
    html {
     width: 100%;
@@ -327,15 +328,24 @@ a{
   font-weight: bold;
   border-radius: 2px;
 }
+.arrow{
+  font-size: 1.5rem;
+  margin-top: 30px;
+  margin-left: 20px;
+  color: #0d0d0d;
+}
 #background-image{
-  width: 100%;
+  width: 457px; 
+  -o-object-fit: cover;
+  object-fit: cover; 
+   
 }
 .menu-lanoteenchantee{
   
     -o-object-fit: cover;
     object-fit: cover;
-    width: 300px;
-    height: 200px;
+    width: 450px;
+    height: 220px;
   }
   .restaurant-title {
     font-family: "Shrikhand", cursive;
@@ -361,7 +371,6 @@ a{
   right: 28px;
   font-size: 1.6rem;
 }
-
 .restaurant-name .heart-full {
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
@@ -373,9 +382,9 @@ a{
   right: 28px;
   opacity: 0;
 }
- .menu-title {
+.menu-title {
   text-transform: uppercase;
-  font-size: 1rem;
+  font-size: 1.2rem;
   font-weight: initial;
   margin: 30px 20px;
   position: relative;
@@ -383,11 +392,45 @@ a{
 .menu-title::before {
   content: "";
   position: absolute;
-  width: 78px;
+  width: 95px;
   height: 25px;
   left: 0%;
   border-bottom: 3px solid #99e2d0;
 }
+.choice-1,
+.choice-2,
+.choice-3,
+.choice-4 {
+  width: 95%;
+  height:55px;
+  cursor: pointer;
+  background: #ffffff;
+  margin: 10px 12px;
+  padding: 5px 0;
+  border-radius: 15px;
+  overflow: hidden;
+  box-shadow: 3px 3px 10px #bfbfbf;
+  display: flex;
+  justify-content: space-between;
+}
+
+
+
+
+#button-commander{  
+  cursor: pointer;
+  opacity: 1;
+  border: none;
+  border-radius: 25px;
+  padding: 16px 30px;
+  color: #ffffff;
+  font-weight: bold;
+  font-size: 1rem;
+  margin: 50px 130px 20px;
+  background: linear-gradient(177deg, #ff79da 10%, #9256dc 90%);
+  box-shadow: 3px 3px 10px #bfbfbf;
+}
+
 footer {
   padding: 20px;
   background-color: #353535;
