--- a/sass/main.css
+++ b/sass/main.css
@@ -383,6 +383,7 @@ a {
 .restaurant-title {
   font-family: "Shrikhand", cursive;
   font-size: 1.6rem;
+  margin-left: 2%;
 }
 
 .restaurant-name .heart {
